<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetailFragment">

        <!--Shoe name-->
        <TextView
            android:id="@+id/tv_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_shoe_company"
            app:layout_constraintTop_toTopOf="@+id/et_shoe_name" />

        <EditText
            android:id="@+id/et_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:ems="5"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/et_shoe_company"
            app:layout_constraintEnd_toEndOf="@+id/et_shoe_company"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_company" />

        <!--Company-->
        <TextView
            android:id="@+id/tv_shoe_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_company"
            app:layout_constraintEnd_toStartOf="@id/et_shoe_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_shoe_company" />

        <EditText
            android:id="@+id/et_shoe_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingBottom="@dimen/big_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_shoe_company"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Shoe size-->
        <TextView
            android:id="@+id/tv_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_size"
            app:layout_constraintEnd_toEndOf="@+id/tv_shoe_company"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_company" />

        <EditText
            android:id="@+id/et_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="5"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/et_shoe_description"
            app:layout_constraintEnd_toEndOf="@+id/et_shoe_company"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_company"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_company" />

        <!--Description-->
        <TextView
            android:id="@+id/tv_shoe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_description"
            app:layout_constraintEnd_toEndOf="@+id/tv_shoe_size"
            app:layout_constraintTop_toTopOf="@+id/et_shoe_description" />

        <EditText
            android:id="@+id/et_shoe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="5"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/et_shoe_company"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_company"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_size" />

        <!--Cancel button-->
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/bt_save"
            app:layout_constraintEnd_toStartOf="@+id/bt_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bt_save" />

        <!--Save button-->
        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_shoe_description"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_description"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
